--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Test Page</h1>
     <p>This is a project for testing out Git.</p>
+    <p>Another line of text is going here.</p>
   </body>
 </html>
