--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Test Page</h1>
     <p>This is a project for testing out Git.</p>
     <p>Another line of text is going here.</p>
+    <p>This line somehow fixed something.</p>
   </body>
 </html>
