Added new image

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <p>This is a project for testing out Git.</p>
     <p>Another line of text is going here.</p>
     <div><img src="View_from_Volcano.jpg"></div>
+    <div><img src="Paris.jpg"></div>
   </body>
 </html>
