--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>This line somehow fixed something.</p>
     <div><img src="View_from_Volcano.jpg"></div>
     <div><img src="Paris.jpg"></div>
+    <p>These are some very nice images.</p>
   </body>
 </html>
