Update index.html with attribution

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <p>This is a project for testing out Git.</p>
     <p>Another line of text is going here.</p>
     <div><img src="View_from_Volcano.jpg"></div>
+    <p><a href="https://commons.wikimedia.org/wiki/File:View_from_Volcano_Pacaya,_Guatemala.jpg">Christopher Crouzet</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons</p>
     <div><img src="Paris.jpg"></div>
+    <p><a href="https://commons.wikimedia.org/wiki/File:Pont_Royal_and_Mus%C3%A9e_d%27Orsay,_Paris_10_July_2020.jpg">Pierre Blaché from Paris, France</a>, CC0, via Wikimedia Commons</p>
     <p>These are some very nice images.</p>
   </body>
 </html>
